# pdf-table-data-parser

./: README.md  pyproject.toml
src/pdf_table_parser/: __init__.py  cli.py  extractor.py
