[project]
name = "pdf-table-data-parser"
version = "0.1.0"
description = "Extract tables from PDF files and output as JSON"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber>=0.11",
]

[project.scripts]
pdf-table-parser = "pdf_table_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_table_parser"]
